<resources>
    <string name="config_statusBarComponent">com.android.systemui.statusbar.phone.PhoneStatusBar</string>
    <string name="config_systemBarComponent">com.android.systemui.statusbar.tablet.TabletStatusBar</string>
    <string name="config_operatorName">none</string>
    <string name="status_bar_date_formatter">"%1$s
%2$s"</string>
    <string name="abbrev_wday_month_day_no_year">@*android:string/abbrev_wday_month_day_no_year</string>
    <string name="app_label">System UI</string>
    <string name="status_bar_clear_all_button">Clear</string>
    <string name="status_bar_do_not_disturb_button">Do not disturb</string>
    <string name="status_bar_please_disturb_button">Show notifications</string>
    <string name="status_bar_recent_remove_item_title">Remove from list</string>
    <string name="status_bar_recent_inspect_item_title">App info</string>
    <string name="status_bar_no_recent_apps">No recent apps</string>
    <string name="status_bar_accessibility_dismiss_recents">Dismiss recent apps</string>
    <string name="status_bar_no_notifications_title">No notifications</string>
    <string name="status_bar_ongoing_events_title">Ongoing</string>
    <string name="status_bar_latest_events_title">Notifications</string>
    <string name="battery_low_title">Connect charger</string>
    <string name="battery_low_subtitle">The battery is getting low.</string>
    <string name="battery_low_percent_format">%d%% remaining</string>
    <string name="invalid_charger">"USB charging not supported.
Use only the supplied charger."</string>
    <string name="battery_low_why">Battery use</string>
    <string name="status_bar_settings_settings_button">Settings</string>
    <string name="status_bar_settings_wifi_button">Wi-Fi</string>
    <string name="status_bar_settings_airplane">Airplane mode</string>
    <string name="status_bar_settings_auto_rotation">Auto-rotate screen</string>
    <string name="status_bar_settings_mute_label">MUTE</string>
    <string name="status_bar_settings_auto_brightness_label">AUTO</string>
    <string name="status_bar_settings_notifications">Notifications</string>
    <string name="status_bar_settings_battery_meter_format">%d%%</string>
    <string name="status_bar_network_name_separator">|</string>
    <string name="bluetooth_tethered">Bluetooth tethered</string>
    <string name="status_bar_input_method_settings_configure_input_methods">Set up input methods</string>
    <string name="status_bar_use_physical_keyboard">Physical keyboard</string>
    <string name="usb_device_permission_prompt">Allow the app %1$s to access the USB device?</string>
    <string name="usb_accessory_permission_prompt">Allow the app %1$s to access the USB accessory?</string>
    <string name="usb_device_confirm_prompt">Open %1$s when this USB device is connected?</string>
    <string name="usb_accessory_confirm_prompt">Open %1$s when this USB accessory is connected?</string>
    <string name="usb_accessory_uri_prompt">No installed apps work with this USB accessory. Learn more about this accessory at %1$s</string>
    <string name="title_usb_accessory">USB accessory</string>
    <string name="label_view">View</string>
    <string name="always_use_device">Use by default for this USB device</string>
    <string name="always_use_accessory">Use by default for this USB accessory</string>
    <string name="usb_debugging_title">Allow USB debugging?</string>
    <string name="usb_debugging_message">"The computer's RSA key fingerprint is:
%1$s"</string>
    <string name="usb_debugging_always">Always allow from this computer</string>
    <string name="compat_mode_on">Zoom to fill screen</string>
    <string name="compat_mode_off">Stretch to fill screen</string>
    <string name="compat_mode_help_header">Compatibility zoom</string>
    <string name="compat_mode_help_body">When an app was designed for a smaller screen, a zoom control will appear by the clock.</string>
    <string name="screenshot_saving_ticker">Saving screenshot…</string>
    <string name="screenshot_saving_title">Saving screenshot…</string>
    <string name="screenshot_saving_text">Screenshot is being saved.</string>
    <string name="screenshot_saved_title">Screenshot captured.</string>
    <string name="screenshot_saved_text">Touch to view your screenshot.</string>
    <string name="screenshot_failed_title">"Couldn't capture screenshot."</string>
    <string name="screenshot_failed_text">"Couldn't save screenshot. Storage may be in use."</string>
    <string name="usb_preference_title">USB file transfer options</string>
    <string name="use_mtp_button_title">Mount as a media player (MTP)</string>
    <string name="use_ptp_button_title">Mount as a camera (PTP)</string>
    <string name="installer_cd_button_title">Install Android File Transfer app for Mac</string>
    <string name="accessibility_hide">Hide</string>
    <string name="accessibility_back">Back</string>
    <string name="accessibility_home">Home</string>
    <string name="accessibility_menu">Menu</string>
    <string name="accessibility_recent">Recent apps</string>
    <string name="accessibility_ime_switch_button">Switch input method button.</string>
    <string name="accessibility_compatibility_zoom_button">Compatibility zoom button.</string>
    <string name="accessibility_compatibility_zoom_example">Zoom smaller to larger screen.</string>
    <string name="accessibility_bluetooth_connected">Bluetooth connected.</string>
    <string name="accessibility_bluetooth_disconnected">Bluetooth disconnected.</string>
    <string name="accessibility_no_battery">No battery.</string>
    <string name="accessibility_battery_one_bar">Battery one bar.</string>
    <string name="accessibility_battery_two_bars">Battery two bars.</string>
    <string name="accessibility_battery_three_bars">Battery three bars.</string>
    <string name="accessibility_battery_full">Battery full.</string>
    <string name="accessibility_no_phone">No phone.</string>
    <string name="accessibility_phone_one_bar">Phone one bar.</string>
    <string name="accessibility_phone_two_bars">Phone two bars.</string>
    <string name="accessibility_phone_three_bars">Phone three bars.</string>
    <string name="accessibility_phone_signal_full">Phone signal full.</string>
    <string name="accessibility_no_data">No data.</string>
    <string name="accessibility_data_one_bar">Data one bar.</string>
    <string name="accessibility_data_two_bars">Data two bars.</string>
    <string name="accessibility_data_three_bars">Data three bars.</string>
    <string name="accessibility_data_signal_full">Data signal full.</string>
    <string name="accessibility_wifi_off">Wifi off.</string>
    <string name="accessibility_no_wifi">Wifi disconnected.</string>
    <string name="accessibility_wifi_one_bar">Wifi one bar.</string>
    <string name="accessibility_wifi_two_bars">Wifi two bars.</string>
    <string name="accessibility_wifi_three_bars">Wifi three bars.</string>
    <string name="accessibility_wifi_signal_full">Wifi signal full.</string>
    <string name="accessibility_no_wimax">No WiMAX.</string>
    <string name="accessibility_wimax_one_bar">WiMAX one bar.</string>
    <string name="accessibility_wimax_two_bars">WiMAX two bars.</string>
    <string name="accessibility_wimax_three_bars">WiMAX three bars.</string>
    <string name="accessibility_wimax_signal_full">WiMAX signal full.</string>
    <string name="accessibility_no_signal">No signal.</string>
    <string name="accessibility_not_connected">Not connected.</string>
    <string name="accessibility_zero_bars">Zero bars.</string>
    <string name="accessibility_one_bar">One bar.</string>
    <string name="accessibility_two_bars">Two bars.</string>
    <string name="accessibility_three_bars">Three bars.</string>
    <string name="accessibility_signal_full">Signal full.</string>
    <string name="accessibility_desc_on">On.</string>
    <string name="accessibility_desc_off">Off.</string>
    <string name="accessibility_desc_connected">Connected.</string>
    <string name="accessibility_data_connection_gprs">GPRS</string>
    <string name="accessibility_data_connection_1x">1 X</string>
    <string name="accessibility_data_connection_hspa">HSPA</string>
    <string name="accessibility_data_connection_3g">3G</string>
    <string name="accessibility_data_connection_3.5g">3.5G</string>
    <string name="accessibility_data_connection_4g">4G</string>
    <string name="accessibility_data_connection_cdma">CDMA</string>
    <string name="accessibility_data_connection_roaming">Roaming</string>
    <string name="accessibility_data_connection_edge">Edge</string>
    <string name="accessibility_data_connection_wifi">Wi-Fi</string>
    <string name="accessibility_no_sim">No SIM.</string>
    <string name="accessibility_bluetooth_tether">Bluetooth tethering.</string>
    <string name="accessibility_airplane_mode">Airplane mode.</string>
    <string name="accessibility_battery_level">Battery %d percent.</string>
    <string name="accessibility_settings_button">System settings.</string>
    <string name="accessibility_notifications_button">Notifications.</string>
    <string name="accessibility_remove_notification">Clear notification.</string>
    <string name="accessibility_gps_enabled">GPS enabled.</string>
    <string name="accessibility_gps_acquiring">GPS acquiring.</string>
    <string name="accessibility_tty_enabled">TeleTypewriter enabled.</string>
    <string name="accessibility_ringer_vibrate">Ringer vibrate.</string>
    <string name="accessibility_ringer_silent">Ringer silent.</string>
    <string name="accessibility_recents_item_dismissed">%s dismissed.</string>
    <string name="accessibility_notification_dismissed">Notification dismissed.</string>
    <string name="accessibility_desc_notification_shade">Notification shade.</string>
    <string name="accessibility_desc_quick_settings">Quick settings.</string>
    <string name="accessibility_desc_recent_apps">Recent apps.</string>
    <string name="accessibility_quick_settings_user">User %s.</string>
    <string name="accessibility_quick_settings_wifi">%1$s. %2$s</string>
    <string name="accessibility_quick_settings_mobile">Mobile %1$s. %2$s. %3$s.</string>
    <string name="accessibility_quick_settings_battery">Battery %s.</string>
    <string name="accessibility_quick_settings_airplane">Airplane Mode %s.</string>
    <string name="accessibility_quick_settings_bluetooth">Bluetooth %s.</string>
    <string name="accessibility_quick_settings_alarm">Alarm set for %s.</string>
    <string name="data_usage_disabled_dialog_3g_title">2G-3G data disabled</string>
    <string name="data_usage_disabled_dialog_4g_title">4G data disabled</string>
    <string name="data_usage_disabled_dialog_mobile_title">Mobile data disabled</string>
    <string name="data_usage_disabled_dialog_title">Data disabled</string>
    <string name="data_usage_disabled_dialog">"You've reached the specified data usage limit.

If you re-enable data, you may be charged by the operator."</string>
    <string name="data_usage_disabled_dialog_enable">Re-enable data</string>
    <string name="status_bar_settings_signal_meter_disconnected">No Internet connection</string>
    <string name="accessibility_clear_all">Clear all notifications.</string>
    <string name="accessibility_rotation_lock_off">Screen will rotate automatically.</string>
    <string name="notification_popup_delete">Delete this notification</string>
    <string name="notification_popup_block">Filter this notification</string>
    <string name="notification_popup_block_info">Modify via \"Security\" > \"Notification Filter\"</string>
    <string name="notification_popup_detail">App info</string>
    <string name="quick_view_indicator_text">Back to incall</string>
    <string name="quick_view_holding_indicator_text">Holding</string>
    <string name="quick_view_imageview_des">Quick view image des</string>
</resources>