<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="24.0dip">
        <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/status_bar_popup_icon" />
        <TextView android:textSize="13.0dip" android:textColor="#ffffffff" android:ellipsize="marquee" android:layout_gravity="center_vertical" android:id="@id/packageName" android:paddingLeft="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
    </LinearLayout>
    <TextView android:textSize="16.0dip" android:textColor="@color/notification_item_primary_text_color" android:ellipsize="marquee" android:gravity="center_vertical" android:id="@id/popup_delete" android:background="@drawable/notification_popup_item_background" android:paddingLeft="5.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/notification_popup_delete" android:singleLine="true" />
    <View android:background="@drawable/status_bar_notification_row_line" android:layout_width="fill_parent" android:layout_height="@dimen/notification_divider_height" />
    <RelativeLayout android:id="@id/popup_block" android:background="@drawable/notification_popup_item_background" android:paddingLeft="5.0dip" android:paddingTop="3.0dip" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16.0dip" android:textColor="@color/notification_item_primary_text_color" android:ellipsize="marquee" android:id="@id/popup_block_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/notification_popup_block" android:singleLine="true" android:layout_alignParentTop="true" />
        <TextView android:textSize="12.0dip" android:textColor="@color/notification_item_secondary_text_color" android:id="@id/popup_block_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/notification_popup_block_info" android:layout_below="@id/popup_block_title" />
    </RelativeLayout>
    <View android:background="@drawable/status_bar_notification_row_line" android:layout_width="fill_parent" android:layout_height="@dimen/notification_divider_height" />
    <TextView android:textSize="16.0dip" android:textColor="@color/notification_item_primary_text_color" android:ellipsize="marquee" android:gravity="center_vertical" android:id="@id/popup_detail" android:background="@drawable/notification_popup_item_background" android:paddingLeft="5.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/notification_popup_detail" android:singleLine="true" />
</LinearLayout>